# system_id

./: README.md
inverted_pend_sim/: CMakeLists.txt  package.xml
inverted_pend_sim/config/: param.yaml
inverted_pend_sim/include/definitions/: eigen_type_def.hpp  simulation_param_def.hpp
inverted_pend_sim/include/inverted_pend_sim/: system_dynamics.cpp  system_dynamics.hpp  system_xx.cpp  system_xx.hpp  system_yy.cpp  system_yy.hpp  system_zz.cpp  system_zz.hpp
inverted_pend_sim/include/ros_wrapper/: ros_wrapper_simulator.cpp  ros_wrapper_simulator.hpp
inverted_pend_sim/include/trajectory_generation/: trajectory_generator.cpp  trajectory_generator.hpp
inverted_pend_sim/include/yaml_converter/: yaml_read.hpp
inverted_pend_sim/include/yaml_read/: yaml_read.cpp  yaml_read.hpp
inverted_pend_sim/launch/: simulator.launch  trajectory.launch
inverted_pend_sim/src/: ros_simulator_node.cpp  ros_trajectory_node.cpp
moment_control/: CMakeLists.txt  package.xml
moment_control/include/moment_control/: moment_control.cpp  moment_control.hpp  variable_type_moment_control.hpp
moment_control/launch/: moment_control.launch
moment_control/src/: moment_control_node.cpp
moment_to_rpm/: CMakeLists.txt  package.xml
moment_to_rpm/include/moment_to_rpm/: moment_to_rpm.cpp  moment_to_rpm.hpp  variable_type.hpp
moment_to_rpm/launch/: moment_node.launch
moment_to_rpm/src/: moment_to_rpm_node.cpp
nmpc_attitude/: CMakeLists.txt  package.xml
nmpc_attitude/nodes/: nmpc_quad_attitude_node.py  nmpc_quad_attitude_node_v2.py
nmpc_attitude/nodes/nmpc_attitude_pkg/: nmpc_quad_attitude_node.py  ocp_solver.py  quad_attitude_model.py  tools.py
